--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,10 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
 }
 
 .profile-image {
@@ -45,4 +49,29 @@ a {
 
 ul {
   list-style-type: none;
+}
+
+.right-container,
+.left-container {
+  display: flex;
+  padding: 8px;
+  margin: 16px;
+  align-items: center;
+  gap: 16px;
+}
+
+.right-container {
+  align-content: flex-end;
+}
+
+.left-container ul{
+  flex: auto;
+}
+
+.left-container ul {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  gap: 16px;
+  flex: auto;
 }
