--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,9 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content:space-between;
 }
 
 img {
@@ -23,4 +26,66 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+
+/* header section */
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  padding: 16px;
+}
+
+.header .left-links,
+.header .right-links {
+  display: flex;
+  gap: 16px;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.header a {
+  text-decoration: none;
+  color: black;
+}
+
+/* main section */
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-width: 360px;
+}
+
+.content .buttons {
+  margin-top: 10px;
+}
+
+.content button {
+  padding: 8px;
+}
+
+/* footer section */
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 16px;
+  background-color: #eeeeee;
+}
+
+.footer .left-links,
+.footer .right-links {
+  display: flex;
+  gap: 16px;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.footer a {
+  text-decoration: none;
+  color: black;
 }
