--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -1,16 +1,34 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   margin: 0;
   min-height: 100vh;
+  /* change display to flex and the direction as a column
+   since the content will be diplayed in a vertical fashion and set content to 
+   space-between so the content is pushed down*/
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
 }
 
 .header {
+  /* change the display to flex and then adjust
+   the vertical axis to the center and the horizontal one to the start */
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-size: 32px;
+  font-weight: 900;
+  padding-left: 16px;
 }
 
 .footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 72px;
   background: #eee;
   color: darkmagenta;
@@ -20,10 +38,45 @@ body {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  display: flex;
+  flex-shrink: 0;
+  font-size: 24px;
+}
+
+.sidebar ul {
+  list-style: none;
+}
+
+.sidebar ul a {
+  text-decoration: none;
+  color: white;
+  padding: 16px;
 }
 
 .card {
   border: 1px solid #eee;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+  box-shadow: 2px 4px 16px rgba(0, 0, 0, 0.06);
   border-radius: 4px;
+  /* changes wip */
+  display: flex;
+  width: 250px;
+
+  margin: 16px;
+  padding: 8px;
+  flex-grow: 1;
+  flex-shrink: 1;
+}
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 48px;
+  flex: 1;
+}
+
+/* add a container that will keep both the sidebar and the content
+ and set flex to 1 so content of the container occupies the available space */
+.container {
+  display: flex;
+  flex: 1;
 }
